--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -8,12 +8,28 @@
 .dialogsItem .active {
     color: gold;
 }
+.noActive {
+    color: black;
+}
 .dialog {
     color: white;
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+.dialog img {
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    margin-right: 10px;
 }
 .messages {
     padding: 10px;
+    margin-top: 20px;
+    
 }
 .message {
     color: white;
+    align-items: center;
+    margin-top: 20px;
 }
